# EmergencyPrepWebpage

./: .gitignore  CLAUDE.md  ELECTRON-README.md  README.md  app-bootstrap.js  app.js  change-notification.js  data-layer.js  data.js  electron-menu-handler.js  event-manager.js  file-manager.js  household.js  index.html  install-electron.bat  main.js  map-manager.js  map.js  package-lock.json  package.json  preload.js  region-cluster-manager-class.js  region-cluster-manager.js  start-electron.bat  state-manager.js  status-manager.js  styles.css  tauri-tile-manager.js  test-electron.js  tile-downloader.py  tile-manager.js  ui.js  utils.js  ward_data.csv
.claude/agents/: code-architect.md  tech-lead-advisor.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
ui/: highlighting.js  household-list.js  resource-filters.js  sidebar.js  ui-manager.js
